# i9_agent

./: .gitignore  main.py  pyproject.toml  requirements.txt
backend/: compliance_matrix.py  db.py  main.py  models.py  prompts.py  state_machine.py  tools.py
data/: i9_rules.txt
frontend/employee/: index.html  style.css
